--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
             <br>
             <div class="row">
-                <h1>Lakshmi Sreedhar</h1>
+                <h1>Navaneeth</h1>
                 <br>
-                <h3> Lawyer | Traveller </h3>
+                <h3> 0% Nerd | Foodie </h3>
                 <br>
                 <br>
                 <div class="col-lg-6 col-lg-offset-3">
