html head and fb twitter change

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
 
-    <title> Lakshmi Sreedhar </title>
+    <title> Navaneeth </title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -45,9 +45,9 @@
             <i class="icon-remove menu-close"></i>
             <a href="#home" class="smoothScroll">Home</a>
             <a href="#contact" class="smoothScroll">Contact</a>
-            <a href="https://www.facebook.com/lakshmi.shiva.928"><i class="icon-facebook"></i></a>
-            <a href="https://twitter.com/lololikka"><i class="icon-twitter"></i></a>
-            <a href="mailto:adv@lakshmisreedhar.com"><i class="icon-envelope"></i></a>
+            <a href="https://www.facebook.com/navaneethmadhusoodanan"><i class="icon-facebook"></i></a>
+            <a href="https://twitter.com/nmadhusoodanan"><i class="icon-twitter"></i></a>
+            <a href="mailto:Oh! wait. Custom mail aint ready ;)"><i class="icon-envelope"></i></a>
         </div>
 
         <!-- Menu button -->
