--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <h1>Navaneeth</h1>
                 <br>
                 <h3> 0% Nerd | Foodie </h3>
+				<h3> Professionally IT Support & Customer Success  </h3>
                 <br>
                 <br>
                 <div class="col-lg-6 col-lg-offset-3">
@@ -111,8 +112,9 @@
                 <p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 
                 <div class="col-lg-6 col-lg-offset-3">
-                    <p>Ashoka Rd,<br/>Mamangalam, Elamakkara<br/>Ernakulam, Kerala, 682026<br/>India</p>
-                    <p>adv@lakshmisreedhar.com</p>
+                    <p>953526*12*</p>
+					<p>Hint: Both are prime numbers former being the largest prime number less than 10 & latter a prime number less than 10 & factor of 27 at the same time</p>
+					
                 </div>
             </div>
         </div>
