--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                 <div class="col-lg-6 col-lg-offset-3">
                     <p>953526*12*</p>
-					<p>Hint: Both are prime numbers former being the largest prime number less than 10 & latter a prime number less than 10 & factor of 27 at the same time</p>
+					<p>Hint: Both are prime numbers former being the largest prime number less than 10 & latter a prime number & factor of 27 at the same time</p>
 					
                 </div>
             </div>
