--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body data-spy="scroll" data-offset="0" data-target="#theMenu">
 
     <!-- Menu -->
-    <nav class="menu" id="theMenu">
+   <!--   <nav class="menu" id="theMenu">
         <div class="menu-wrap">
             <h1 class="logo"><a href="index.html#home">Menu</a></h1>
             <i class="icon-remove menu-close"></i>
@@ -49,10 +49,12 @@
             <a href="https://twitter.com/nmadhusoodanan"><i class="icon-twitter"></i></a>
             <a href="mailto:Oh! wait. Custom mail aint ready ;)"><i class="icon-envelope"></i></a>
         </div>
+		-->
 
         <!-- Menu button -->
-        <div id="menuToggle"><i class="icon-reorder"></i></div>
+       <!-- <div id="menuToggle"><i class="icon-reorder"></i></div>
     </nav>
+	-->
 
 
 
@@ -66,7 +68,7 @@
                 <h1>Navaneeth</h1>
                 <br>
                 <h3> 0% Nerd | Foodie </h3>
-				<h3> Professionally IT Support & Customer Success  </h3>
+				<h3> Professionally into IT Support & Customer Success  </h3>
                 <br>
                 <br>
                 <div class="col-lg-6 col-lg-offset-3">
@@ -108,13 +110,19 @@
     <div id="f">
         <div class="container">
             <div class="row">
-                <h3>CONTACT ME</h3>
+                <h3>To Get In Touch</h3>
                 <p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 
                 <div class="col-lg-6 col-lg-offset-3">
-                    <p>953526*12*</p>
-					<p>Hint: Both are prime numbers former being the largest prime number less than 10 & latter a prime number & factor of 27 at the same time</p>
-					
+                    <p >Phone: 953526*12*</p>
+					<a style="color:grey;">Hint: Both are prime numbers former being the largest prime number less than 10 & latter a prime number & factor of 27 at the same time!</a>
+					</div>	
+				
+				<div class="col-lg-6 col-lg-offset-3 social-icon">	
+					<a href="https://www.facebook.com/navaneethmadhusoodanan"><i1 class="icon-facebook"></i1></a>
+                    <a href="https://twitter.com/nmadhusoodanan"><i1 class="icon-twitter"></i1></a>
+					<a href="https://twitter.com/navaneethmadhusoodanan"><i1 class="icon-instagram"></i1></a>
+					<a href="https://twitter.com/navaneethmadhusoodanan"><i1 class="icon-linkedin"></i1></a>
                 </div>
             </div>
         </div>
